--- a/css/index.css
+++ b/css/index.css
@@ -93,6 +93,9 @@
     //z-index: 1;
     cursor: pointer;
     border-radius: 4px;
+    font-size: 20px;
+    line-height: 40px;
+    text-align: center;
 }
 
 .visible
