--- a/css/index.css
+++ b/css/index.css
@@ -3,6 +3,8 @@
     margin:0px;
     padding:0px;
     font-family: monospace;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .root
